--- a/GuitarPractice/package.json
+++ b/GuitarPractice/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query-devtools": "^4.29.11",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@types/react-select": "^5.0.1",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
     "rc-select": "^14.4.3",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2"
   },
