--- a/.github/workflows/deploySite.yml
+++ b/.github/workflows/deploySite.yml
@@ -36,16 +36,16 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install dependencies
-        run: cd ./GuitarPractice | npm install
+        run: cd ./GuitarPractice && npm install
       - name: Build
-        run: cd ./GuitarPractice | npm run build
+        run: cd ./GuitarPractice && npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
-          path: './dist'
+          path: './GuitarPractice/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
