--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,20 @@ services:
       - type: bind
         source: /data
         target: /opt/data
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     build: ./guitarBE/
   nginx:
     build: ./nginx/
+    restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
