--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,20 +17,20 @@ http {
         }
     }
 
-    # server {
-    #     listen 443 ssl;
-    #     server_name api.practicethatguitar.co.uk;
-    #     server_tokens off;
+    server {
+        listen 443 ssl;
+        server_name api.practicethatguitar.co.uk;
+        server_tokens off;
 
-    #     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.practicethatguitar.co.uk/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.practicethatguitar.co.uk/privkey.pem;
 
-    #     location / {
-    #         proxy_pass  http://strapi:1337;
-    #         proxy_set_header    Host                $http_host;
-    #         proxy_set_header    X-Real-IP           $remote_addr;
-    #         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    #     }
-    # }
+        location / {
+            proxy_pass  http://strapi:1337;
+            proxy_set_header    Host                $http_host;
+            proxy_set_header    X-Real-IP           $remote_addr;
+            proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        }
+    }
 }
 
