--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,4 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt:rw
       - ./certbot/www:/var/www/certbot:rw
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email {email} -d api.practicethatguitar.co.uk --agree-tos
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email r.f.hylands@gmail.com -d api.practicethatguitar.co.uk --agree-tos
