--- a/.github/workflows/deployStrapi.yml
+++ b/.github/workflows/deployStrapi.yml
@@ -33,5 +33,6 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            whoami
-            ls -al
+            cd ./GuitarPractice
+            git pull
+            sudo docker compose restart nginx strapi
