--- a/.github/workflows/deployStrapi.yml
+++ b/.github/workflows/deployStrapi.yml
@@ -33,6 +33,6 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd ./GuitarPractice
+            cd ./guitarPractice/
             git pull
             sudo docker compose restart nginx strapi
