--- a/GuitarPractice/package.json
+++ b/GuitarPractice/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
     "@types/react-select": "^5.0.1",
+    "@types/react-toggle": "^4.0.3",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
     "rc-select": "^14.4.3",
@@ -23,7 +24,9 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "react-toggle": "^4.1.3",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
