--- a/.github/workflows/deployStrapi.yml
+++ b/.github/workflows/deployStrapi.yml
@@ -35,7 +35,7 @@ jobs:
           script: |
             cd ./guitarPractice/
             git pull
-            sudo docker compose build --no-cache nginx strapi
             sudo docker compose stop 
-            sudo docker compose start 
+            sudo docker system prune -f -a
+            sudo docker compose build --no-cache nginx strapi
             sudo docker compose start nginx strapi
