--- a/.github/workflows/deployStrapi.yml
+++ b/.github/workflows/deployStrapi.yml
@@ -38,4 +38,4 @@ jobs:
             sudo docker compose stop 
             sudo docker system prune -f -a
             sudo docker compose build --no-cache nginx strapi
-            sudo docker compose start nginx strapi
+            sudo docker compose up -d nginx strapi
