--- a/GuitarPractice/package.json
+++ b/GuitarPractice/package.json
@@ -23,7 +23,9 @@
     "@types/react-select": "^5.0.1",
     "@types/react-toggle": "^4.0.3",
     "axios": "^1.3.4",
+    "dnd-core": "^16.0.1",
     "framer-motion": "^10.13.0",
+    "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "rc-select": "^14.4.3",
     "react": "^18.2.0",
@@ -36,7 +38,6 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.4",
-    "react-toastify": "^9.1.2",
     "react-toggle": "^4.1.3",
     "reactjs-popup": "^2.0.5",
     "use-debounce": "^9.0.4"
