--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "concurrently": "^8.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-select": "^5.7.2"
   }
 }
